k8s/monitoring/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/group.name: costspike-app-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # 🚨 TEMP FIX: REMOVE SSL REDIRECT (IMPORTANT)
    # alb.ingress.kubernetes.io/ssl-redirect: '443'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:347026173735:certificate/6c33d96f-ba4a-4cdb-ac0b-d431a1a52439

spec:
  ingressClassName: alb
  rules:
  - host: prometheus.devcloudzone.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-kube-prometheus-stack-prometheus
            port:
              number: 9090
